Fix horizontal scroll

--- a/app/static/styles/style.css
+++ b/app/static/styles/style.css
@@ -1847,3 +1847,6 @@ html, body {
     max-width: 100%;
     overflow-x: hidden;
 }
+img.preview {
+    object-fit: cover;
+}
